removed cloud handler from Cloud

--- a/Cloud/Pdfmaker/ppdf.kv
+++ b/Cloud/Pdfmaker/ppdf.kv
@@ -111,7 +111,7 @@
 			IconButton:
 				icon_source: atlas_path+'crop1'
 				background_color: 0,0,0,0
-				on_release: root.crop_modal.open()
+				on_release: root.crop_manager()
 
 			BoxLayout:
 				IconButton:
