--- a/student_tools/student_tools.kv
+++ b/student_tools/student_tools.kv
@@ -210,7 +210,7 @@
             ImgBtn:
                 size_hint: None, 1
                 size: '32dp', '32dp'
-                on_release: root.manager.manager.go_to_page('home_page')
+                on_release: root.manager.parent.manager.go_to_page('home_page')
                 source: 'arrow_back1.png'
                 pos_hint: {'top': 1}
 
