--- a/student_tools/student_tools.kv
+++ b/student_tools/student_tools.kv
@@ -149,7 +149,7 @@
                     pos: self.pos
 
             anim_threshold: 0
-            MyTab:
+            MyTab1:
                 text: 'Time Table Generator'
                 BoxLayout:
                     orientation: 'vertical'
@@ -186,7 +186,7 @@
                                 color: .2, .5, 1, 1
                                 text: 'Generate Exam Time Table'
 
-            MyTab:
+            MyTab1:
                 text: 'Time Table View'
                 Label:
                     text: 'No Time Table Generated'
