fixed bugs for next version

--- a/Cloud/cloud.kv
+++ b/Cloud/cloud.kv
@@ -55,7 +55,7 @@
                     rgba: get_color_from_hex('#FFE099')
                 Ellipse:
                     size: [self.texture_size[0]+6]*2
-                    pos: self.center_x-25, self.center_y-25
+                    pos: self.center_x-(self.texture_size[0]+6)/2, self.center_y-(self.texture_size[0]+6)/2
             size_hint_x: None
             width: '100dp'
             text: root.course_data['code']
@@ -86,8 +86,8 @@
                 Color:
                     rgba: get_color_from_hex('#FFE099')
                 Ellipse:
-                    size: 50, 50
-                    pos: self.center_x-25, self.center_y-25
+                    size: [self.texture_size[0]+20]*2
+                    pos: self.center_x-(self.texture_size[0]+20)/2, self.center_y-(self.texture_size[0]+20)/2
             size_hint_x: None
             width: '100dp'
             source: 'doc.png'
