--- a/student_tools/student_tools.kv
+++ b/student_tools/student_tools.kv
@@ -950,8 +950,8 @@
                 Color:
                     rgba: get_color_from_hex('#FFE099')
                 Ellipse:
-                    size: 50, 50
-                    pos: self.center_x-25, self.center_y-25
+                    size: [self.texture_size[0]+6]*2
+                    pos: self.center_x-(self.texture_size[0]+6)/2, self.center_y-(self.texture_size[0]+6)/2
             size_hint_x: None
             width: '100dp'
             text: root.day[:3]
