--- a/Cloud/cloud.kv
+++ b/Cloud/cloud.kv
@@ -1,5 +1,3 @@
-#:import Screen kivy.uix.screenmanager
-#:import ScreenManager kivy.uix.screenmanager
 #:import get_color_from_hex kivy.utils.get_color_from_hex
 #:import ScrollEffect kivy.effects.scroll.ScrollEffect
 #:import FloatScrollEffect mahartstudios.scroll.FloatScrollEffect
@@ -8,12 +6,7 @@
 #:import os os
 
 # This is the kv design for UniCloud
-
 <Label>:
-	color: 0,0,0,1
-    font_name: 'comic'
-<Button>:
-	color: 0,0,0,1
     font_name: 'comic'
 
 <Spinner>:
@@ -52,7 +45,7 @@
         Label:
             canvas.before:
                 Color:
-                    rgba: get_color_from_hex('#FFE099')
+                    rgba: get_color_from_hex('#00E099')
                 Ellipse:
                     size: [self.texture_size[0]+6]*2
                     pos: self.center_x-((self.texture_size[0]+6)/2), self.center_y-((self.texture_size[0]+6)/2)
@@ -101,7 +94,6 @@
                 markup: True
                 font_size: '16dp'
                 color: get_color_from_hex('#444444')
-                font_name: 'comic'
             BoxLayout:
                 Label:
                     size_hint_x: .7
@@ -139,6 +131,7 @@
             valign: 'middle'
             text: 'Student tools'
             text_size: self.size
+            color: 0,0,0,1
         IconToggle:
             id: toggle
 			size_hint_x: None
@@ -160,12 +153,11 @@ NavigationDrawer:
                 pos: self.pos
 
         GridLayout:
+            id: menu
             size_hint_y: None
             height: self.minimum_height
-            id: menu
             spacing: 1
             padding: 2
-            orientation: 'vertical'
             cols: 1
 
             BoxLayout:
@@ -179,7 +171,7 @@ NavigationDrawer:
                     icon_source: 'arrow_back1.png'
                     size_hint_x: None
                     width: '50dp'
-                    on_release: root.toggle_state(True)
+                    on_release: root.toggle_state()
                     normal_color: get_color_from_hex('#ff9966')
 
             LeftIconButton:
@@ -187,22 +179,22 @@ NavigationDrawer:
                 size_hint_y: None
                 height: '50dp'
                 icon_source: 'home.png'
-                on_release: root.toggle_state(True);_manager_.go_to_page('home_page')
+                on_release: root.toggle_state();_manager_.go_to_page('home_page')
 
             LeftIconButton:
                 text: 'Downloads'
                 size_hint_y: None
                 height: '50dp'
                 icon_source: 'download.png'
-                on_release: root.toggle_state(True); _manager_.go_to_page('download_page')
+                on_release: root.toggle_state(); _manager_.go_to_page('download_page')
 
-            LeftIconButton:
                 text: 'Pdf Maker'
                 size_hint_y: None
+            LeftIconButton:
                 height: '50dp'
                 icon_source: 'pdf.png'
                 on_release:
-                    root.toggle_state(True); _manager_.go_to_page('pdf_maker');
+                    root.toggle_state(); _manager_.go_to_page('pdf_maker');
                     _manager_.parent.allow_touch_drag= False;
 
             LeftIconButton:
@@ -210,7 +202,7 @@ NavigationDrawer:
                 size_hint_y: None
                 height: '50dp'
                 icon_source: 'settings.png'
-                on_release: root.toggle_state(True); #_manager_.current ='settings page';
+                on_release: root.toggle_state(); #_manager_.current ='settings page';
 
             NavDropButton:
                 BoxLayout:
@@ -221,12 +213,12 @@ NavigationDrawer:
                         size_hint_y: None
                         height: '40dp'
                         text: 'Gp Calculator'
-                        on_release: _manager_.go_to_external_page('calculator'); root.toggle_state(True);
+                        on_release: _manager_.go_to_external_page('calculator'); root.toggle_state();
                     NormalButton:
                         size_hint_y: None
                         height: '40dp'
                         text: 'Matic Detector'
-                        on_release: root.toggle_state(True); _manager_.go_to_external_page('detector_page');
+                        on_release: root.toggle_state(); _manager_.go_to_external_page('detector_page');
 
             BoxLayout:
                 spacing: 1
@@ -520,10 +512,9 @@ NavigationDrawer:
                 BoxLayout:
                     size_hint_y: None
                     height: '40dp'
-                    padding: 6
-                    Button:
+                    padding: '6dp'
+                    NormalButton:
                         text: "Cancel"
-                        background_normal: ''
                         on_release: _manager_.current='downloading' #root.dismiss()
                         color: (0, 0, 0, 1)
 
@@ -560,15 +551,13 @@ NavigationDrawer:
                     size_hint_y: None
                     height: '40dp'
                     padding: 6
-                    Button:
+                    NormalButton:
                         text: "Stop"
-                        background_normal: ''
                         on_release: root.dismiss()
                         color: (0, 0, 0, 1)
-                    Button
+                    NormalButton:
                         text: 'Ok'
                         color: (0, 0, 0, 1)
-                        background_normal: ''
                         on_release: root.dismiss(); root.take_to_download_page()
 
 <CustomInput@TextInput>:
